// Generated by polka.codes

import { afterEach, beforeEach, describe, expect, test } from 'bun:test'
import { mkdtempSync, rmSync, writeFileSync } from 'node:fs'
import { tmpdir } from 'node:os'
import { join } from 'node:path'
import { Command } from 'commander'

import { ApiProviderConfig } from './ApiProviderConfig'
import { AiProvider } from './getModel'
import { addSharedOptions, parseOptions } from './options'

describe('ApiProviderConfig', () => {
  let testDir: string

  beforeEach(() => {
    testDir = mkdtempSync(join(tmpdir(), 'polkacodes-test-'))
  })

  afterEach(() => {
    rmSync(testDir, { recursive: true, force: true })
  })

  test('getConfigForCommand with command-specific config', () => {
    const config = new ApiProviderConfig({
      defaultProvider: AiProvider.Anthropic,
      providers: {
        [AiProvider.Anthropic]: {
          apiKey: 'test-key',
          defaultModel: 'claude-3-opus',
        },
      },
      commands: {
        chat: {
          provider: AiProvider.DeepSeek,
          model: 'deepseek-chat',
        },
      },
    })

    expect(config.getConfigForCommand('chat')).toMatchSnapshot()
  })

  test('getConfigForCommand falls back to default provider', () => {
    const config = new ApiProviderConfig({
      defaultProvider: AiProvider.Anthropic,
      providers: {
        [AiProvider.Anthropic]: {
          apiKey: 'test-key',
          defaultModel: 'claude-3-opus',
        },
      },
    })

    expect(config.getConfigForCommand('unknown')).toMatchSnapshot()
  })

  test('getConfigForAgent with agent-specific config', () => {
    const config = new ApiProviderConfig({
      defaultProvider: AiProvider.Anthropic,
      providers: {
        [AiProvider.Anthropic]: {
          apiKey: 'test-key',
          defaultModel: 'claude-3-opus',
        },
      },
      agents: {
        coder: {
          model: 'claude-3-sonnet',
        },
      },
    })

    expect(config.getConfigForAgent('coder')).toMatchSnapshot()
  })
})

describe('parseOptions', () => {
  let testDir: string

  beforeEach(() => {
    testDir = mkdtempSync(join(tmpdir(), 'polkacodes-test-'))
  })

  afterEach(() => {
    rmSync(testDir, { recursive: true, force: true })
  })

  test('prioritizes CLI flags over env vars and config', () => {
    const configPath = join(testDir, 'test-config.yml')
    writeFileSync(
      configPath,
      `
defaultProvider: deepseek
defaultModel: deepseek-chat
providers:
  anthropic:
    apiKey: config-key
`,
    )

    const command = new Command()
    addSharedOptions(command)
    const options = command
      .parse([
        'node',
        'test',
        '--api-provider',
        'deepseek',
        '--model',
        'deepseek-chat-32k',
        '--api-key',
        'cli-key',
        '--config',
        configPath,
        '--verbose',
      ])
      .opts()

    const result = parseOptions(options, { cwdArg: testDir }, testDir, {})
    expect(result.verbose).toBe(1)
    expect(result.providerConfig.getConfigForCommand('chat')).toMatchSnapshot()
  })

  test('handles multiple config files', () => {
    const configPath1 = join(testDir, 'config1.yml')
    const configPath2 = join(testDir, 'config2.yml')

    writeFileSync(
      configPath1,
      `
defaultProvider: anthropic
defaultModel: claude-3-opus
rules:
  - rule1
`,
    )

    writeFileSync(
      configPath2,
      `
defaultModel: claude-3-sonnet
rules:
  - rule2
`,
    )

    const command = new Command()
    addSharedOptions(command)
    const options = command.parse(['node', 'test', '--config', configPath1, '--config', configPath2]).opts()

    const result = parseOptions(options, { cwdArg: testDir }, testDir, {})
    expect(result.config).toMatchSnapshot()
  })

  test('merges environment variables with config', () => {
    const env = {
      POLKA_API_PROVIDER: AiProvider.DeepSeek,
      POLKA_MODEL: 'deepseek-chat',
      POLKA_API_KEY: 'cli-key',
    }
    const command = new Command()
    addSharedOptions(command)
    const options = command.parse(['node', 'test']).opts()

    const result = parseOptions(options, { cwdArg: testDir }, testDir, env)
    expect(result.providerConfig.getConfigForCommand('chat')).toMatchSnapshot()
  })

  test('throws error when apiKey provided without provider', () => {
    const command = new Command()
    addSharedOptions(command)
    const options = command.parse(['node', 'test', '--api-key', 'invalid-key']).opts()

    expect(() => parseOptions(options, { cwdArg: testDir }, testDir, {})).toThrow('Must specify a provider')
  })

  test('handles provider-specific environment variables', () => {
    const env = {
      ANTHROPIC_API_KEY: 'provider-env-key',
      DEEPSEEK_API_KEY: 'deepseek-key',
      OPENROUTER_API_KEY: 'openrouter-key',
    }
    const command = new Command()
    addSharedOptions(command)
    const options = command.parse(['node', 'test']).opts()

    const result = parseOptions(options, { cwdArg: testDir }, testDir, env)
    expect(result.providerConfig.providers.anthropic?.apiKey).toBe('provider-env-key')
    expect(result.providerConfig.providers.deepseek?.apiKey).toBe('deepseek-key')
    expect(result.providerConfig.providers.openrouter?.apiKey).toBe('openrouter-key')
  })

  test('handles budget from environment', () => {
    const env = {
      POLKA_BUDGET: '500',
    }
    const command = new Command()
    addSharedOptions(command)
    const options = command.parse(['node', 'test']).opts()

    const result = parseOptions(options, { cwdArg: testDir }, testDir, env)
    expect(result.budget).toBe(500)
  })
})
