// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ApiProviderConfig getConfigForCommand with command-specific config 1`] = `
{
  "apiKey": undefined,
  "model": "deepseek-chat",
  "parameters": {},
  "provider": "deepseek",
  "toolFormat": "polka-codes",
}
`;

exports[`ApiProviderConfig getConfigForCommand falls back to default provider 1`] = `
{
  "apiKey": "test-key",
  "model": "claude-3-opus",
  "parameters": {},
  "provider": "anthropic",
  "toolFormat": "polka-codes",
}
`;

exports[`ApiProviderConfig getConfigForAgent with agent-specific config 1`] = `
{
  "apiKey": "test-key",
  "model": "claude-3-sonnet",
  "parameters": {},
  "provider": "anthropic",
  "toolFormat": "polka-codes",
}
`;

exports[`parseOptions prioritizes CLI flags over env vars and config 1`] = `
{
  "apiKey": "cli-key",
  "model": "deepseek-chat-32k",
  "parameters": {},
  "provider": "deepseek",
  "toolFormat": "polka-codes",
}
`;

exports[`parseOptions handles multiple config files 1`] = `
{
  "defaultModel": "claude-3-sonnet",
  "defaultProvider": "anthropic",
  "excludeFiles": undefined,
  "providers": {
    "anthropic": {
      "defaultModel": "claude-3-sonnet",
    },
  },
  "requestTimeoutSeconds": 10,
  "retryCount": 5,
  "rules": [
    "rule1",
    "rule2",
  ],
}
`;

exports[`parseOptions merges environment variables with config 1`] = `
{
  "apiKey": "cli-key",
  "model": "deepseek-chat",
  "parameters": {},
  "provider": "deepseek",
  "toolFormat": "polka-codes",
}
`;
